# lattices

./: .gitignore  README.md  cat_100lat_10imp_p0.02.lat  cat_100lat_10imp_p0.05.lat  cat_100lat_1imp.lat  cat_100lat_1imp_p0.0.lat  cat_100lat_2imp.lat  cat_100lat_4imp.lat  cat_100lat_4imp_p0.02.lat  cat_100lat_4imp_p0.05.lat  cat_100lat_7imp_p0.02.lat  cat_100lat_7imp_p0.05.lat  cat_100lat_8imp.lat  cat_20_mixed.lat  cat_20lat_10imp_p0.02.lat  cat_20lat_10imp_p0.05.lat  cat_20lat_1imp.lat  cat_20lat_1imp_p0.0.lat  cat_20lat_2imp.lat  cat_20lat_4imp.lat  cat_20lat_4imp_p0.02.lat  cat_20lat_4imp_p0.05.lat  cat_20lat_7imp_p0.02.lat  cat_20lat_7imp_p0.05.lat  cat_20lat_8imp.lat  cat_500lat_1imp.lat  cat_500lat_1imp_p0.0.lat  cat_500lat_2imp.lat  cat_600_mixed_3_imp.lat  cat_60_mixed_8_imp.lat  cat_test_100lat_1imp.lat  cat_test_500lat_1imp.lat  postBuild  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  lattices.rst  utils.rst
examples/: E11128.ipynb  basic_lattice_operations.ipynb  bcc_sc.ipynb  catalogue_overview.ipynb  sample_cat.lat
examples/bcc-sc/: bcc-sc.json
examples/lattice_data/: E11128.inp  E11128.json  bcc-sc.inp
lattices/: __init__.py
lattices/data/: __init__.py  catalogue.py  lattice.py
lattices/utils/: __init__.py  abaqus.py  abq_analyse_parallel.py  elasticity_func.py  plotting.py  test_pytest.py
